test/cases/compile_errors/implicit_semicolon-block_expr.zig
export fn entry() void {
    _ = {};
    var good = {};
    _ = {}
    var bad = {};
}

// error
// backend=stage2
// target=native
//
// :4:11: error: expected ';' after statement
